codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__prompt_mode.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5190
expression: terminal.backend()
---
"                                                                                                    "
" #                                                                                                  "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? for shortcuts                                                                      Prompt mode  "
