codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__prompt_mode_after_leading_hash.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5937
expression: terminal.backend()
---
"                                                                                                    "
" › draft                                                                                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
